--- a/about.html
+++ b/about.html
@@ -8,17 +8,17 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <link rel="icon" href="images/favicon.png" type="image/gif"/>
+  <link rel="icon" href="assets/images/favicon.png" type="image/gif"/>
   <title> Cafeesa| PRAROZ </title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css"/>
   <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet"/>
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet"/>
+  <link href="assets/css/style.css" rel="stylesheet"/>
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet"/>
+  <link href="assets/css/responsive.css" rel="stylesheet"/>
 
 </head>
 
@@ -60,7 +60,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="img-box">
-          <img src="images/about-img.jpg" alt="">
+          <img src="assets/images/about-img.jpg" alt="">
 
         </div>
       </div>
