--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css"/>
   <!-- font awesome style -->
-  <link href="css/font-awesome.min.css" rel="stylesheet"/>
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet"/>
   <!-- Custom styles for this template -->
   <link href="assets/css/style.css" rel="stylesheet"/>
   <!-- responsive style -->
@@ -132,11 +132,11 @@
   
 
   <!-- jQery -->
-  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="assets/js/jquery-3.4.1.min.js"></script>
   <!-- bootstrap js -->
-  <script src="js/bootstrap.js"></script>
+  <script src="assets/js/bootstrap.js"></script>
   <!-- custom js -->
-  <script src="js/custom.js"></script>
+  <script src="assets/js/custom.js"></script>
   <!-- Google Map -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
